// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotAuthorized component should apply custom styles 1`] = `
<EmptyState
  className="ins-c-not-authorized something"
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to 
  </Title>
  <EmptyStateBody>
    Contact your organization administrator(s) for more information.
  </EmptyStateBody>
  <Button
    component="a"
    href="."
    variant="primary"
  >
    Go to landing page
  </Button>
</EmptyState>
`;

exports[`NotAuthorized component should not show buttons 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to 
  </Title>
  <EmptyStateBody>
    Contact your organization administrator(s) for more information.
  </EmptyStateBody>
</EmptyState>
`;

exports[`NotAuthorized component should render 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to 
    Foo
  </Title>
  <EmptyStateBody>
    Contact your organization administrator(s) for more information.
  </EmptyStateBody>
  <Button
    component="a"
    href="."
    variant="primary"
  >
    Go to landing page
  </Button>
</EmptyState>
`;

exports[`NotAuthorized component should show custom description 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to 
  </Title>
  <EmptyStateBody>
    Some text
  </EmptyStateBody>
  <Button
    component="a"
    href="."
    variant="primary"
  >
    Go to landing page
  </Button>
</EmptyState>
`;

exports[`NotAuthorized component should use custom icon 1`] = `
<div
  className="pf-c-empty-state ins-c-not-authorized "
>
  <div
    className="pf-c-empty-state__content"
  >
    some Icon!
    <h5
      className="pf-c-title pf-m-lg"
    >
      You do not have access to 
    </h5>
    <div
      className="pf-c-empty-state__body"
    >
       You do not have access to 
      Foo
    </Title>
    <EmptyStateBody>
      Contact your organization administrator(s) for more information or visit 
      <a
        href="./settings/my-user-access"
      >
         My User Access 
      </a>
       to learn more about your permissions.
    </EmptyStateBody>
    <Button
      component="a"
      href="."
      type={null}
    >
      Go to landing page
    </a>
  </div>
</div>
`;
